--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI= "mongodb+srv://reekrajroy:NxW9+sj3cdQkqg#@cluster0.6shzwgo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI= ""
